# Bin-picking

./: CMakeLists.txt  README.md  package.xml
bin_picking/: CMakeLists.txt  README.md  package.xml
bin_picking/bagfiles/: pieces_segmentation1.bag
bin_picking/bagfiles/Obj90deg/: cloud_cluster_0.pcd  cloud_cluster_1.pcd  cloud_cluster_2.pcd  cloud_cluster_3.pcd  cloud_cluster_4.pcd  cloud_cluster_5.pcd
bin_picking/calibration/kinect/: depth2_A00366922636045A.yaml  depth3_A00366922636045A.yaml  depth4_A00366922636045A.yaml  depth_A00366922636045A.yaml  rgb3_A00366922636045A.yaml  rgb4_A00366922636045A.yaml  rgb_A00366922636045A.yaml  rgb_A00366922636045AMig.yaml
bin_picking/calibration/launch/: kinect_extrinsic_calibration.launch
bin_picking/calibration/src/: camera_calibration_client.py  changecalibration.py
bin_picking/config/: joint_names.yaml  kinect_bag_rviz.rviz  robot_rviz.rviz  robot_state_visualize.rviz
bin_picking/include/bin_picking/: header_pcl.h  pcl_fun.h  sensorRS232.h
bin_picking/launch/: bin_picking.launch  bringup_all_move_fanuc.launch  global_state_visualize.launch  globalvisualization.launch  kinect.launch  kinect_bag.launch  kinect_bag_global_state.launch  kinect_live.launch  load_bin_picking.launch  move_fanuc_bringup_all.launch  objDetection_pointTFtranfer.launch  robot_interface_streaming_bin_picking.launch  robot_state_visualize.launch  sensorRS232.launch
bin_picking/meshes/: gripper.STL  sensor.stl
bin_picking/move/: generate_plan_move.py  move_fanuc.py  move_fanuc_debug.py  move_fanuc_demo.py
bin_picking/msg/: TargetsPose.msg
bin_picking/src/: end_effector_position.cpp  objDetection.cpp  pointTFtransfer.cpp  sensorRS232.cpp
bin_picking/urdf/: binpicking.xacro  binpicking_gripper_macro.xacro  binpicking_macro.xacro  binpicking_robot_macro.xacro  binpicking_sensor_macro.xacro
calibration/: depth.yaml  rgb.yaml
config/: joint_names.yaml
fanuc_control/: CMakeLists.txt  package.xml
fanuc_control/include/fanuc_control/: fanuc_control.h
fanuc_control/launch/: fanuc_90.launch
fanuc_control/src/: Position.cpp  dataReceiver.cpp  debug.cpp  fanuc.cpp  fanuc_control.cpp  inputData.cpp  robotCom.cpp
fanuc_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
fanuc_moveit_config/config/: bin_picking.srdf  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml
fanuc_moveit_config/launch/: bin_picking_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
fanuc_moveit_config/src/: move_fanuc_big.py
fanuc_movit_config/: .setup_assistant  CMakeLists.txt  package.xml
fanuc_movit_config/config/: fanuc_lrmate200id.srdf  kinematics.yaml
fanuc_movit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
fanuc_movit_config/src/: move_fanuc.py
include/bin_picking/: header_pcl.h  pcl_fun.h
lauch/: kinect_bag.launch  kinect_live.launch
launch/: globalvisualization.launch  kinect_bag.launch  kinect_live.launch
meshes/: gripper.stl
r_platform/: CMakeLists.txt  package.xml
r_platform/CAD/: CenaNova-1.stl  CenaNovaLaser-1.stl  Curva-1.stl  PLACA-B-1.stl  Placa-Cima-1.stl  Sistema - Contro-1.STL  Sistema - Hokuyo UST-10LX-1.STL  Sistema - L1-1 PLACA L1de-1.STL  Sistema - L1-1 PLACA L2-1.STL  Sistema - L2-1 PLACA L1d-1.STL  Sistema - L2-1 PLACA L2-1.STL  Sistema - PLACA B-2.STL  Sistema - Placa Preta-1.STL  Sistema - UTM-30LX-1.STL  robot-1.stl
r_platform/launch/: demo.launch  description.launch  experience.launch  external_hector.launch  external_teleop.launch  joy.launch  robonuc_aut_navi.launch  robonuc_hybrid.launch  robonuc_hybrid_ext.launch  robonuc_teleop.launch  with_out_controller.launch
r_platform/msg/: navi.msg
r_platform/params/: default.yaml  joy_params.yaml
r_platform/src/: decompose_vel.cpp  hybrid .cpp.save  hybrid.cpp  r_automatic.cpp  r_client_node.cpp  r_teleop.cpp  test_risk.cpp
r_platform/urdf/: hokuyo.urdf.xacro  odom_description.urdf.xacro  r_platform_macro.urdf.xacro  robuter.urdf.xacro  robuter_macro.urdf.xacro
robonuc/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
robonuc/include/: aialpabeta.h  aialpabeta.h~  aisearch.h  alphabeta.h  bitops.h  commitjump.h  commitmove.h  definitions.h  jumper.h  main.h  main.h~  mover.h  positions.h  print.h
robonuc/launch/: laser_setup.launch  robotic_system.launch
robonuc/msg/: Orientacao.msg~  Origem.msg~  PathPosition.msg~  Posicao.msg~  alarm.msg  conjunto.msg  conjunto.msg~  ios.msg  platmov.msg  platpos.msg  robonuc_motion.msg  teclado.msg
robonuc/params/: default.yaml
robonuc/src/: commitjump.c~  commitmove.c~  imagem2d_1.cpp~  pcl_centroides.cpp~  pcl_filter1.cpp~  pcl_filtery_rgb.cpp~  pcl_planar_segmentation2_rgb.cpp~  pcl_planar_segmentationPecas_rgb.cpp~  pcl_planar_segmentationTabuleiro_rgb.cpp~  pcl_planar_segmentation_rgb.cpp~  pcl_save.cpp~  pick_place_tsimoes.cpp~  print.c~  service_server.cpp~  teclado.cpp~  vs_IO_client.cpp  vs_fanuc_client.cpp  vs_frame.cpp  vs_keyboard.cpp  vs_laser_receptor.cpp  vs_platform_sim.cpp
robonuc/srv/: Path_Posit.srv~  robonuc_com.srv
src/: planeDetection.cpp
urdf/: binpicking_gripper_macro.xacro  binpicking_macro.xacro
